config/resources/bestie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestie-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bestie-service
            port:
              number: 8000
